--- a/src/style.css
+++ b/src/style.css
@@ -31,4 +31,10 @@ canvas {
 form input {
     margin-bottom: 1rem;
     border: 1px solid black;
+    border-radius: 2px;
+}
+
+form button {
+    border: 1px solid black;
+    border-radius: 2px;
 }
