--- a/src/style.css
+++ b/src/style.css
@@ -11,13 +11,12 @@ canvas {
 .menu {
     /* Positioning */
     position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    left: 100%;
+    transform: translate(-100%);
     z-index: 999;
 
     /* Visual style */
-    background-color: #FEFEFE;
+    background-color: rgba(250, 250, 250, 0.7);
     padding: 2rem;
     border: gray 1px;
     border-radius: 3px;
